# Aegis-Assets

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT_SUMMARY.md  LICENSE  Makefile  PHASE2_TASKS.md  README.md  SECURITY.md  SPRINT_SUMMARY.md  TASKS.md  api_demo.html  assets.db  codex_changes.patch  demo_gltf_test.py  demo_unity_bundle.py  real_unity_test.assets  tatus  test_gltf_export.rs  test_unity_integration.py
.claude/: settings.local.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  plugin_request.md
.github/workflows/: ci.yml  performance-benchmark.yml
.specstory/history/: 2025-08-25_15-33Z-fixing-cargo-workspace-manifest-errors.md  2025-08-28_03-12Z-unity-plugin-development-progress-and-features.md  2025-09-08_15-07Z-assess-project-repo-and-testing-initiation.md  2025-09-19_15-42Z-push-changes-from-virtual-environment-to-master.md
aegis-assets/: CONTRIBUTING.md  Cargo.toml  README.md
aegis-assets/aegis-control-plane/: Cargo.toml
aegis-assets/aegis-control-plane/src/: main.rs
aegis-assets/aegis-core/: Cargo.toml
aegis-assets/aegis-core/src/: audit.rs  compliance.rs  control_plane.rs  events.rs  export.rs  extract.rs  lib.rs
aegis-assets/aegis-core/src/archive/: mod.rs
aegis-assets/aegis-core/src/resource/: mod.rs
aegis-assets/aegis-plugins/unity/: Cargo.toml
aegis-assets/aegis-plugins/unity/src/: compression.rs  formats.rs  lib.rs
aegis-assets/aegis-python/: Cargo.toml
aegis-assets/aegis-python/src/: lib.rs
aegis-assets/compliance-profiles/: unity.yaml  valve.yaml
aegis-assets/dashboard/: index.html  package.json
aegis-assets/dashboard/scripts/: lint.js
aegis-assets/dashboard/src/: controlPlaneApi.js  main.js  styles.css
aegis-assets/dashboard/src/components/: AssetGallery.js  AuditTimeline.js  JobTimeline.js  OperationsConsole.js  PolicyStudio.js  RiskHeatmap.js
aegis-assets/dashboard/src/utils/: dom.js
aegis-assets/dashboard/tests/: smoke.test.js
aegis-assets/docs/: COMPLIANCE.md  IMPLEMENTATION_STATUS.md
aegis-cli/: Cargo.toml
aegis-cli/src/: main.rs  ui.rs
aegis-cli/src/commands/: compliance.rs  extract.rs  mod.rs  recipe.rs
aegis-core/: Cargo.toml
aegis-core/migrations/: 001_initial_schema.sql  002_add_indexes.sql  003_add_search.sql
aegis-core/src/: api.rs  asset_db.rs  compliance.rs  extract.rs  lib.rs  patch.rs  plugin_registry.rs  resource.rs  security.rs  test_integration.rs
aegis-core/src/archive/: mod.rs
aegis-core/src/export/: export.rs  mod.rs
aegis-core/src/plugin_registry/: api.rs  database.rs  dependency.rs  manifest.rs  mod.rs  models.rs  operations.rs
aegis-dev-sdk/: Cargo.toml
aegis-dev-sdk/src/: docs.rs  hotreload.rs  main.rs  marketplace.rs  scaffold.rs  signing.rs  testing.rs
aegis-dev-sdk/src/commands/: config.rs  dev_server.rs  docs.rs  marketplace.rs  mod.rs  new_project.rs  profile.rs  signing.rs  testing.rs  validate.rs
aegis-dev-sdk/src/docs/: generator.rs  server.rs  templates.rs
aegis-dev-sdk/src/hotreload/: notify_system.rs  rebuild.rs  watcher.rs
aegis-dev-sdk/src/marketplace/: client.rs  metadata.rs  publishing.rs
aegis-dev-sdk/src/signing/: distribution.rs  keys.rs  verification.rs
aegis-dev-sdk/src/templates/: advanced.rs  minimal.rs  mod.rs  unity.rs  unreal.rs
aegis-dev-sdk/src/testing/: fixtures.rs  framework.rs  integration.rs
aegis-plugins/unity/: Cargo.toml  README.md  build.sh
aegis-plugins/unity/examples/: streaming_benchmark.rs
aegis-plugins/unity/src/: audio_pipeline.rs  compression.rs  converters.rs  firelight_adpcm.rs  formats.rs  integration_test.rs  lib.rs  mesh_pipeline.rs  secure_compression.rs  streaming.rs  texture_pipeline.rs
aegis-plugins/unreal/: Cargo.toml
aegis-plugins/unreal/src/: lib.rs
aegis-python/: Cargo.toml
aegis-python/src/: lib.rs
aegis-security/: Cargo.toml
aegis-security/migrations/: 001_audit_tables.sql  002_audit_indexes.sql  003_audit_partitions.sql
aegis-security/src/: audit.rs  compliance.rs  lib.rs  policy.rs  sandbox.rs  scanning.rs  signing.rs  threats.rs
aegis-web-bridge/: Cargo.toml
aegis-web-bridge/src/: main.rs
compliance-profiles/: bethesda.yaml  nintendo.yaml  unreal.yaml
docs/: API.md  EXTRACTION_ENGINE_ANALYSIS.md  PLUGIN_STREAMING_GUIDE.md  ROADMAP.md  Security-Fixes-Summary.md  Sprint-3-Summary.md  Sprint-4-Infrastructure-Plan.md  Vision-Alignment-Review.md
docs/phase2/sprint1/: AI_ARCHITECTURE_PROPOSAL.md  AI_SERVICE_COMPARISON.md  DATA_PIPELINE_SPIKE.md  METADATA_SCHEMA_V1.md  TAG_TAXONOMY_V1.md
docs/phase2/sprint2/: COMPLIANCE_CHECKS.md  PLUGIN_REGISTRY_SPEC.md  SECURITY_FRAMEWORK.md  UX_WIREFRAMES.md
docs/phase2/sprint3/: CLIP_DEPLOYMENT_IMPLEMENTATION.md  MARKETPLACE_WEB_INTERFACE.md  PLUGIN_REGISTRY_BACKEND.md
examples/: unity_extraction.py
test_db_assets/: character_mesh.gltf  game_level.level  game_script.lua
test_gltf/: demo_cube.gltf
testdata/: README.md
testdata/unity/: manifest.yaml
tools/bench/: Cargo.toml
tools/bench/src/: corpus.rs  extraction.rs  main.rs  memory.rs  metrics.rs
tools/texture_demo/: Cargo.toml
tools/texture_demo/src/: main.rs
ui/: index.html  marketplace.html
