[package]
name = "aegis-cli"
version.workspace = true
edition = "2021"
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for Aegis-Assets"
keywords = ["cli", "game", "assets", "extraction"]

[[bin]]
name = "aegis"
path = "src/main.rs"

[dependencies]
# Core aegis dependencies
aegis-core = { path = "../aegis-core" }

# Workspace dependencies
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# CLI dependencies
clap = { version = "4.4", features = ["derive"] }
indicatif = "0.17"
console = "0.15"

[dev-dependencies]
tempfile = "3.8"
