[package]
name = "aegis-core"
version.workspace = true
edition = "2021"
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core engine for Aegis-Assets: compliance-first game asset extraction"
keywords = ["game", "assets", "extraction", "engine"]

[dependencies]
# Workspace dependencies
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
blake3.workspace = true
uuid.workspace = true
tokio.workspace = true
rayon.workspace = true
memmap2.workspace = true
byteorder.workspace = true
nom.workspace = true
gltf-json.workspace = true
image.workspace = true
flate2.workspace = true
lz4_flex.workspace = true
xz2.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Additional core-specific dependencies
walkdir = "2.4"
once_cell = "1.19"
dashmap = "5.5"

# Plugin registry dependencies
rusqlite = { version = "0.30", features = ["bundled", "uuid", "chrono", "serde_json"] }
rusqlite_migration = "1.1"
regex = "1.10"
toml = "0.8"
tempfile = "3.8"

# HTTP server dependencies (optional)
axum = { version = "0.7", features = ["multipart"], optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["cors", "trace"], optional = true }
hyper = { version = "1.0", optional = true }

[features]
default = ["all-formats"]
all-formats = ["unity", "unreal", "source", "bethesda"]
unity = []
unreal = []
source = []
bethesda = []

# AI features (future)
ai-tagging = []
ai-upscaling = []

# Enterprise features
enterprise = ["audit-trails", "compliance-verification"]
audit-trails = []
compliance-verification = []

# API features
api = ["axum", "tower", "tower-http", "hyper"]

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"
proptest = "1.4"
