[package]
name = "aegis-web-bridge"
version = "0.1.0"
edition = "2021"
description = "Web UI bridge server for Aegis-Assets"
license = "MIT"

[[bin]]
name = "aegis-web-bridge"
path = "src/main.rs"

[dependencies]
# Core Aegis dependencies
aegis-core = { path = "../aegis-core", features = ["api"] }

# Web server dependencies
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling and utilities
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

[features]
default = []
dev = []