[package]
name = "aegis-control-plane"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Control-plane service for Aegis-Assets"

[dependencies]
aegis-core = { path = "../aegis-core" }
axum = "0.7"
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream = { version = "0.1", features = ["sync"] }
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
