[package]
name = "aegis-unity-plugin"
version.workspace = true
edition = "2021"
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Unity engine plugin for Aegis-Assets"
keywords = ["unity", "game", "assets", "extraction"]

[dependencies]
# Core aegis dependencies
aegis-core = { path = "../../aegis-core" }

# Workspace dependencies
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
blake3.workspace = true
uuid.workspace = true
byteorder.workspace = true
nom.workspace = true
flate2.workspace = true
lz4_flex.workspace = true
tracing.workspace = true
memmap2.workspace = true

# Unity-specific dependencies
lzma-rs = "0.3"      # LZMA compression used in some Unity versions
base64 = "0.22"      # Base64 encoding for glTF binary data

# Asset conversion dependencies
image.workspace = true  # Image processing for textures
gltf-json.workspace = true  # glTF format support
hound = "3.5"
fsbex = "0.3.0"
symphonia-codec-adpcm = "0.5.4"

[features]
default = ["all-versions"]
all-versions = ["unity-3", "unity-4", "unity-5", "unity-2017", "unity-2018", "unity-2019", "unity-2020", "unity-2021", "unity-2022", "unity-2023"]
unity-3 = []
unity-4 = []
unity-5 = []
unity-2017 = []
unity-2018 = []
unity-2019 = []
unity-2020 = []
unity-2021 = []
unity-2022 = []
unity-2023 = []

[dev-dependencies]
tempfile = "3.8"
