[package]
name = "aegis-unreal-plugin"
version.workspace = true
edition = "2021"
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Unreal Engine plugin for Aegis-Assets"
keywords = ["unreal", "game", "assets", "extraction"]

[dependencies]
# Core aegis dependencies
aegis-core = { path = "../../aegis-core" }

# Workspace dependencies
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
blake3.workspace = true
uuid.workspace = true
byteorder.workspace = true
nom.workspace = true
flate2.workspace = true
lz4_flex.workspace = true
tracing.workspace = true

# Unreal-specific dependencies
aes = "0.8"           # AES decryption for encrypted pak files

[features]
default = ["all-versions"]
all-versions = ["ue4", "ue5"]
ue4 = []
ue5 = []

[dev-dependencies]
tempfile = "3.8"
