[package]
name = "aegis-bench"
version = "0.1.0"
edition = "2021"
description = "Performance benchmarking harness for Aegis-Assets extraction pipeline"

[[bin]]
name = "bench"
path = "src/main.rs"

[dependencies]
# Core Aegis dependencies
aegis-core = { path = "../../aegis-core", features = ["api"] }

# CLI and argument parsing
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"

# Performance monitoring
sysinfo = "0.30"
metrics = "0.22"
metrics-util = "0.16"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# File and path handling
walkdir = "2.4"
glob = "0.3"

# Time and statistics
instant = "0.1"
statistical = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Memory tracking (optional, doesn't work well on Windows)
jemalloc-ctl = { version = "0.5", optional = true }
libc = "0.2"

# Progress reporting
indicatif = "0.17"

[target.'cfg(unix)'.dependencies]
# Unix-specific memory tracking
procfs = "0.16"

[target.'cfg(windows)'.dependencies]
# Windows-specific dependencies
winapi = { version = "0.3", features = ["processthreadsapi", "psapi"] }

[features]
default = []
detailed_memory = ["jemalloc-ctl"]
streaming_tests = []
