[package]
name = "aegis-texture-demo"
version = "0.1.0"
edition = "2021"
description = "Sprint 2 Texture Pipeline Demo Tool"

[dependencies]
# CLI and utilities
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "texture-demo"
path = "src/main.rs"
